hphp/test/quick/global_addelem.php.expectf

Fatal error: append on $GLOBALS is not implemented yet. in %s on line 6
